syntax = "proto3";
package  go_micro_services;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


option go_package = "pb/";


service UserService{
  rpc GetOneById(ById) returns (UserResponse);
  rpc GetOneByEmail(ByEmail) returns (UserResponse);
  rpc UpdateUser(Update) returns (UserResponse);
  rpc CreateUser(Create) returns (UserResponse);
  rpc DeleteUser(ById) returns (UserResponse);
  rpc ListUsers(UserResponseRepeated) returns (UserResponse);
}

message User {
  string id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
  google.protobuf.StringValue password = 4;
  google.protobuf.StringValue balance = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  google.protobuf.Timestamp deleted_at = 8;
}

message ById {
  string id=1;
}
message ByEmail {
  string email=1;
}
message empty {}

message UserResponse{
  int64 code=1;
  string message=2;
  User data=3;
}
message UserResponseRepeated{
  int64 code=1;
  string message=2;
  repeated User data=3;
}
message Update{
  string id=1;
  optional string name=2;
  optional string email=3;
  optional string password=4;
  optional string balance=5;
}
message Create{
  google.protobuf.StringValue name=1;
  google.protobuf.StringValue balance=2;
  google.protobuf.StringValue email=3;
  google.protobuf.StringValue password=4;
}